fix dumb overflow setting

--- a/src/styles/02_global/responsive.scss
+++ b/src/styles/02_global/responsive.scss
@@ -1,7 +1,6 @@
 html,
 body {
     min-height: 100%;
-    overflow: hidden;
 }
 
 // Make images responsive by default.
